# ostree-sysext

./: README.md  builders  plugins  pyproject.toml
ostree-sysext/: __init__.py  main.py
ostree_sysext/: __main__.py  boot.py  builder.py  deployment.py  environment.py  extensions.py  main.py  plugin.py  repo.py  sandbox.py  systemd.py
ostree_sysext/cli/: __init__.py  common.py
ostree_sysext/cli/commands/: add_remove.py  deploy.py  list_command.py  mutate.py
ostree_sysext/dbus/: __init__.py  io.thesola.OSTreeSysext1.Extension.xml  io.thesola.OSTreeSysext1.OS.xml  io.thesola.OSTreeSysext1.Sysroot.xml  ostree-sysext.service
pkg/lib/ostree-sysext/builders/remote/: __init__.py
pkg/lib/ostree-sysext/plugins/initramfs/: __init__.py
pkg/lib/systemd/system/: ostree-sysext-early-boot.service  ostree-sysext.service
pkg/share/dbus-1/services/: io.thesola.OSTreeSysext1.service
