[project]
name = "ostree-sysext"
description = "Handy system extension manager for OSTree systems"
license = { "file" = "./LICENSE" }
readme = "./README.md"
urls = { "Source" = "https://github.com/thesola10/ostree-sysext" }
dependencies = [
    "click",
    "click-option-group",
    "rich",
    "PyGObject",
    "python-dotenv",
    "mntfinder",
    "pydbus"
    ]
dynamic = [ "version" ]

[[project.authors]]
name = "Karim Vergnes"
email = "me@thesola.io"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
ostree-sysext = "ostree_sysext.cli:main_fixed_for_ostree"

[tool.flit.external-data]
directory = "pkg"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"'
]
"ostree_sysext/__init__.py" = [
    "__version__ = '{version}'"
]
